# autopilot-fuzzy

./: README.md
backend/: fuzzy_controller.py  main.py  pyproject.toml  simulation.py
frontend/: package-lock.json  package.json
frontend/src/canvas/: cartesian.ts  gauge.ts  horizon.ts  utils.ts  yoke.ts
frontend/src/composables/: useSimState.ts  useWebSocket.ts
frontend/src/types/: simulation.ts
